--- a/web/map.html
+++ b/web/map.html
@@ -222,9 +222,8 @@
     }
     destroyMap();
     if (!window.BMap) {
-      var script = document.createElement("script");
-      script.src = "https://api.map.baidu.com/api?v=3.0&ak=" + encodeURIComponent(ak) + "&s=1";
-      script.onload = function () {
+      window.baiduMapReady = function () {
+        window.baiduMapReady = null;
         if (!window.BMap || typeof window.BMap.Map !== "function") {
           document.getElementById("routeInfo").textContent = "百度地图 API 未就绪（脚本可能被拦截或返回错误）。请打开 F12 → Network，查看 api.map.baidu.com 是否返回 403，并确认 AK 与白名单正确。";
           return;
@@ -232,6 +231,8 @@
         initBaiduMap();
         if (lastRouteData) drawRouteFromIndex(currentStopIndex);
       };
+      var script = document.createElement("script");
+      script.src = "https://api.map.baidu.com/api?v=3.0&ak=" + encodeURIComponent(ak) + "&s=1&callback=baiduMapReady";
       script.onerror = function () {
         document.getElementById("routeInfo").textContent = "百度地图脚本加载失败（网络或地址无效）。请检查 F12 → Network 中 api.map.baidu.com 请求。";
       };
