--- a/web/map.html
+++ b/web/map.html
@@ -20,7 +20,9 @@
       flex-wrap: wrap;
       gap: 8px;
       align-items: center;
+      pointer-events: none;
     }
+    .toolbar > * { pointer-events: auto; }
     .toolbar .toolbar-label { padding: 10px 14px; font-size: 0.95rem; color: #e6edf3; }
     .toolbar select, .toolbar button, .toolbar a {
       padding: 10px 14px;
@@ -47,7 +49,9 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+      pointer-events: none;
     }
+    .nav-panel * { pointer-events: auto; }
     .nav-panel .next-stop { font-size: 1rem; color: #e6edf3; }
     .nav-panel .btns { display: flex; gap: 10px; flex-wrap: wrap; }
     .nav-panel .btns a, .nav-panel .btns button {
@@ -65,6 +69,14 @@
     .nav-panel .btn-nav { background: #3b82f6; color: #fff; }
     .nav-panel .btn-arrived { background: #22c55e; color: #fff; }
     .nav-panel .all-done { color: #22c55e; font-size: 1.1rem; }
+    #btnToggleUI { position: fixed; top: 12px; right: 12px; z-index: 1001; padding: 10px 14px; border-radius: 10px; border: 1px solid #2a2d35; background: rgba(20,21,26,0.95); color: #e6edf3; font-size: 0.95rem; cursor: pointer; display: none; }
+    #btnToggleUI.show { display: block; }
+    body.toolbar-hidden .toolbar { display: none !important; }
+    body.toolbar-hidden #navPanel { display: none !important; }
+    body.toolbar-hidden #allDonePanel { display: none !important; }
+    /* 隐藏百度地图底部版权/署名栏 */
+    #map .anchorBL,
+    #map .BMap_cpyCtrl { display: none !important; }
   </style>
 </head>
 <body>
@@ -75,9 +87,9 @@
     <button type="button" id="btnRestore">恢复上次线路</button>
     <a href="index.html" target="_self">← 返回控制台</a>
     <span id="routeInfo" class="status"></span>
+    <button type="button" id="btnCollapse" title="收起菜单">收起</button>
   </div>
-  <p id="mapBlankHint" class="status" style="display:none; position: fixed; top: 52px; left: 12px; right: 12px; z-index: 999; margin: 0; padding: 8px 12px; border-radius: 8px; background: rgba(20,21,26,0.95); border: 1px solid #2a2d35; font-size: 0.85rem; color: #8b9199;"></p>
-
+  <button type="button" id="btnToggleUI" title="显示菜单">≡ 菜单</button>
   <div id="navPanel" class="nav-panel" style="display: none;">
     <div id="nextStopText" class="next-stop"></div>
     <div class="btns">
@@ -203,11 +215,35 @@
     return [mglng + 0.0065 * Math.cos(mglat * x_PI), mglat + 0.006 * Math.sin(mglng * x_PI)];
   }
 
+  /** 单点调起导航（仅终点，无途经点） */
   function getNavUrl(lat, lng, name) {
     var bd = wgs84ToBd09(lat, lng);
     if (!bd || bd[0] == null || bd[1] == null) return "#";
     var dest = bd[1] + "," + bd[0];
     return "baidumap://map/direction?destination=name:" + encodeURIComponent(name || "") + "|latlng:" + dest + "&mode=driving";
+  }
+
+  /**
+   * 调起百度地图 App 导航：起点 + 途经点 + 终点（最多 15 个途经点）
+   * 格式：origin=我的位置&destination=终点&waypoints=途经1|途经2&mode=driving
+   */
+  function getNavUrlWithWaypoints() {
+    var nextIdx = currentStopIndex + 1;
+    if (nextIdx >= route_addresses.length) return "#";
+    var origin = "我的位置";
+    var destAddr = route_addresses[route_addresses.length - 1] || "";
+    var waypointsArr = [];
+    for (var i = nextIdx; i < route_addresses.length - 1 && waypointsArr.length < 15; i++) {
+      var a = (route_addresses[i] || "").trim();
+      if (a) waypointsArr.push(encodeURIComponent(a));
+    }
+    var params = [
+      "origin=" + encodeURIComponent(origin),
+      "destination=" + encodeURIComponent(destAddr),
+      "mode=driving"
+    ];
+    if (waypointsArr.length > 0) params.push("waypoints=" + waypointsArr.join("|"));
+    return "baidumap://map/direction?" + params.join("&");
   }
 
   function destroyMap() {
@@ -254,6 +290,9 @@
     bmap = new window.BMap.Map("map");
     bmap.centerAndZoom(new window.BMap.Point(121.0, 32.0), 10);
     bmap.enableScrollWheelZoom(true);
+    if (typeof bmap.enableDragging === "function") bmap.enableDragging();
+    if (typeof bmap.enableInertialDragging === "function") bmap.enableInertialDragging();
+    if (typeof bmap.enableDoubleClickZoom === "function") bmap.enableDoubleClickZoom(true);
     // 瓦片加载完成/失败时在控制台输出，便于排查白屏
     if (typeof bmap.addEventListener === "function") {
       bmap.addEventListener("tilesloaded", function () { console.log("[地图] 瓦片已加载"); });
@@ -268,6 +307,7 @@
     if (bmap) bmap.clearOverlays();
   }
 
+  /** 按实际驾车道路绘制路线：逐段调用百度驾车路线规划，再画折线；失败则退回直线 */
   function drawRouteFromIndex(fromIndex) {
     if (!lastRouteData) return;
     var coords = route_coords.slice(fromIndex);
@@ -278,18 +318,87 @@
     if (coords.length === 0) return;
     clearMapOverlays();
     if (!bmap) return;
-    var points = [];
-    coords.forEach(function (c, i) {
-      if (!c || c[0] == null || c[1] == null) return;
+    var bdPoints = [];
+    var orderNums = ["①", "②", "③", "④", "⑤", "⑥", "⑦", "⑧", "⑨", "⑩"];
+    for (var i = 0; i < coords.length; i++) {
+      var c = coords[i];
+      if (!c || c[0] == null || c[1] == null) continue;
       var bd = wgs84ToBd09(c[0], c[1]);
-      if (!bd || bd[0] == null || bd[1] == null) return;
-      points.push(new window.BMap.Point(bd[0], bd[1]));
-      var mk = new window.BMap.Marker(new window.BMap.Point(bd[0], bd[1]));
-      mk.setLabel(new window.BMap.Label((labels[i] || types[i] || "途经") + (addresses[i] ? " " + addresses[i].slice(0, 8) + "…" : ""), { offset: new window.BMap.Size(10, -10) }));
+      if (!bd || bd[0] == null || bd[1] == null) continue;
+      var pt = new window.BMap.Point(bd[0], bd[1]);
+      bdPoints.push(pt);
+      var num = fromIndex + i + 1;
+      var orderStr = orderNums[num - 1] || num + ".";
+      var typeLabel = labels[i] || types[i] || "途经";
+      var addrShort = addresses[i] ? " " + addresses[i].slice(0, 10) + (addresses[i].length > 10 ? "…" : "") : "";
+      var mk = new window.BMap.Marker(pt);
+      mk.setLabel(new window.BMap.Label(orderStr + " " + typeLabel + addrShort, { offset: new window.BMap.Size(10, -10) }));
       bmap.addOverlay(mk);
-    });
-    bmap.addOverlay(new window.BMap.Polyline(points, { strokeColor: "#3b82f6", strokeWeight: 4 }));
-    bmap.setViewport(points);
+    }
+    if (bdPoints.length === 0) return;
+    if (bdPoints.length === 1) {
+      bmap.setCenter(bdPoints[0]);
+      bmap.setZoom(14);
+      return;
+    }
+    var allPathPoints = [];
+    var segmentIndex = 0;
+    function drawStraightLine() {
+      bmap.addOverlay(new window.BMap.Polyline(bdPoints, { strokeColor: "#3b82f6", strokeWeight: 4 }));
+      bmap.setViewport(bdPoints);
+    }
+    function onSegmentDone() {
+      segmentIndex++;
+      if (segmentIndex >= bdPoints.length - 1) {
+        if (allPathPoints.length > 0) {
+          bmap.addOverlay(new window.BMap.Polyline(allPathPoints, { strokeColor: "#3b82f6", strokeWeight: 4 }));
+          bmap.setViewport(allPathPoints);
+        } else {
+          drawStraightLine();
+        }
+        document.getElementById("routeInfo").textContent = "剩余 " + (addresses.length - 1) + " 站";
+        return;
+      }
+      requestDrivingSegment(segmentIndex);
+    }
+    function requestDrivingSegment(idx) {
+      if (typeof window.BMap.DrivingRoute === "undefined") {
+        drawStraightLine();
+        return;
+      }
+      var start = bdPoints[idx];
+      var end = bdPoints[idx + 1];
+      var opts = { renderOptions: { map: null, autoViewport: false } };
+      if (window.BMap.DrivingPolicy && window.BMap.DrivingPolicy.LEAST_TIME) opts.policy = window.BMap.DrivingPolicy.LEAST_TIME;
+      var driving = new window.BMap.DrivingRoute(bmap, opts);
+      driving.setSearchCompleteCallback(function () {
+        try {
+          var res = driving.getResults();
+          if (res && res.getPlan && res.getPlan(0)) {
+            var route = res.getPlan(0).getRoute(0);
+            if (route && route.getPath) {
+              var path = route.getPath();
+              if (path && path.length > 0) {
+                for (var k = 0; k < path.length; k++) allPathPoints.push(path[k]);
+                onSegmentDone();
+                return;
+              }
+            }
+          }
+        } catch (e) {}
+        allPathPoints.push(start);
+        allPathPoints.push(end);
+        onSegmentDone();
+      });
+      driving.setErrorCallback(function () {
+        allPathPoints.push(start);
+        allPathPoints.push(end);
+        onSegmentDone();
+      });
+      driving.search(start, end);
+    }
+    document.getElementById("routeInfo").textContent = "正在规划驾车路线…";
+    requestDrivingSegment(0);
   }
 
   function updateNavPanel() {
@@ -306,12 +415,9 @@
     var label = point_labels[nextIdx] || point_types[nextIdx] || ("第" + (nextIdx + 1) + "站");
     var addr = route_addresses[nextIdx] || "";
     document.getElementById("nextStopText").textContent = "下一站: " + label + " " + (addr.length > 18 ? addr.slice(0, 18) + "…" : addr);
-    var c = route_coords[nextIdx];
-    if (c && c[0] != null && c[1] != null) {
-      var a = document.getElementById("btnOpenNav");
-      a.href = getNavUrl(c[0], c[1], addr);
-      a.textContent = "打开导航（百度地图）";
-    }
+    var a = document.getElementById("btnOpenNav");
+    a.href = getNavUrlWithWaypoints();
+    a.textContent = "打开导航（百度地图，含途经点）";
   }
 
   function saveStopIndex() {
@@ -337,14 +443,6 @@
     drawRouteFromIndex(currentStopIndex);
     updateNavPanel();
     if (bmap && typeof bmap.invalidateSize === "function") bmap.invalidateSize();
-    // 若地图仍为白屏，多为 AK 类型或白名单导致，提示用户
-    var hintEl = document.getElementById("mapBlankHint");
-    if (hintEl) {
-      hintEl.textContent = "若地图为白屏：请确认 app_config 中 baidu_map_ak 为「浏览器端」AK，且在百度地图开放平台已添加当前访问域名白名单。";
-      hintEl.style.display = "block";
-      window.clearTimeout(window._mapBlankHintTimer);
-      window._mapBlankHintTimer = setTimeout(function () { hintEl.style.display = "none"; }, 12000);
-    }
   }
 
   /** 规划结果入库（每司机一条，覆盖） */
@@ -413,6 +511,15 @@
   }
 
   document.getElementById("btnArrived").onclick = markArrived;
+
+  document.getElementById("btnCollapse").onclick = function () {
+    document.body.classList.add("toolbar-hidden");
+    document.getElementById("btnToggleUI").classList.add("show");
+  };
+  document.getElementById("btnToggleUI").onclick = function () {
+    document.body.classList.remove("toolbar-hidden");
+    document.getElementById("btnToggleUI").classList.remove("show");
+  };
 
   function loadAndDraw() {
     var base = getApiBase();
